--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,8 @@
 [submodule "src/smithlab_cpp"]
 	path = src/smithlab_cpp
 	url = https://github.com/smithlabcode/smithlab_cpp.git
+	branch = master
 [submodule "src/adssrc"]
 	path = src/adssrc
 	url = https://github.com/andrewdavidsmith/adssrc.git
+	branch = master
